@@ -1,7 +1,10 @@
+entities = \
+	authors.xml	interface.xml	introduction.xml	legal.xml \
+	license.xml	modules.xml	personal.xml	preferences.xml \
+	search.xml	 start.xml	studypad.xml 
 figdir = figures
-docname = gnomesword
+docname = gnomesword-manual
 lang = C
-omffile = gnomesword-C.omf
-entities =  legal.xml
+omffile = gnomesword-manual-C.omf
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
