@@ -15,6 +15,11 @@
 			Pierre Benz
 			</para>
 		</listitem>
+		<listitem>
+			<para>
+			Peter von Kaehne
+			</para>
+		</listitem>
 	</itemizedlist>
 	<para>
 	Please send all comments and suggestions regarding 
