@@ -37,7 +37,8 @@
 # This variable (docdir) specifies where the documents should be installed.
 # This default value should work for most packages.
 # docdir = $(datadir)/@PACKAGE@/doc/$(docname)/$(lang)
-docdir = $(datadir)/gnome/help/$(docname)/$(lang)
+appid = gnomesword
+docdir = $(datadir)/gnome/help/$(appid)/$(lang)
 
 # **************  You should not have to edit below this line  *******************
 xml_files = $(entities) $(docname).xml
